# neural-network-from-scratch

./: .gitignore  README.md  evaluate.py  hyper-tune.py  plot_weights.py  pyproject.toml  requirements.txt  train.py  viewer.py
docs/: softmax-derivative.md  the-math.md
nn_from_scratch/: dataset.py  evaluation.py  network.py  repository.py
nn_from_scratch/abstract/: abstract_layer.py  identity_layer.py  linear_layer.py
nn_from_scratch/encoders/: one_hot_encoder.py
nn_from_scratch/layers/: abstract_layer.py  identity_layer.py  linear_layer.py  relu_layer.py  softmax_layer.py
nn_from_scratch/ui/: progress.py
resources/: accuracies-and-learning-rates.ipynb  weights_and_biases.json  weights_and_biases.npy
resources/data/: training-report.jsonl
tests/: test_dataset.py  test_evaluation.py  test_network.py  test_repository.py
tests/encoders/: test_one_hot_encoder.py
tests/layers/: test_identity_layer.py  test_linear_layer.py
tests/ui/: test_progress.py
