[project]
name = "neural-network-from-scratch"
version = "0.1.0"
description = "Neural network implemented from scratch (without Pytorch or Tensorflow) to solve a simple (MNIST) computer vision task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.39.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.poe.tasks]
test = "uv run pytest -vvv"
coverage = "uv run pytest --cov-report term-missing --cov=nn_from_scratch tests/"
