[project]
name = "neural-network-from-scratch"
version = "0.1.0"
description = "Neural network implemented from scratch (without Pytorch or Tensorflow) to solve a simple (MNIST) computer vision task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "poethepoet>=0.39.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "pragma: exclude file",
]

[tool.ruff]
line-length = 125

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
test = "uv run coverage run -m pytest -vvv tests/"
coverage = "uv run coverage report -m --include='nn_from_scratch/*'"
lint = "uv run ruff check --fix"
format = "uv run ruff format"
